--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 10rem;
 }
-
-.App-link {
-  color: #61dafb;
+.app .count {
+  margin-bottom: 2rem;
+  text-align: center;
+  display: flex;
+  margin-left: 9rem;
+  /* border: seagreen;
+  border-style: dashed; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app .count h3 {
+  line-height: 8.6rem;
+  margin-right: 1rem;
+  color: rgb(9, 77, 100);
+}
+.app .count h1 {
+  font-size:5em;
+  margin-top: 2rem;
+}
+.app .buttons button {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 30%;
+  border: 1px;
+  /* border-style: dashed; */
+  margin: 0 2rem;
+  font-size: 4em;
+  box-shadow: 0 4px 32px 0 rgba(10,14,29,.02), 0 8px 64px 0 rgba(10,14,29,.08);
+  cursor: pointer;
+}
+.app .buttons button:hover{
+  /* font-size: 7em; */
+  color: salmon;
+}
+.app .buttons button:focus{
+  outline: 0;
 }
